fix: write plan tab for classic plans CSS

--- a/app/assets/stylesheets/dmpopidor/_navs.scss
+++ b/app/assets/stylesheets/dmpopidor/_navs.scss
@@ -50,6 +50,8 @@
     li.active>a:hover {
       color: $blue;
       border: 1px solid $blue;
+      border-bottom-color: transparent;
+      background-color: $white;
     }
   }
 
