Issue #3144 - Custom styling added, deprecated classes replaced, styling and alignment fixes Changes in this PR: - custom styling added for btn:disabled, btn-close and modal-header - sharp corners for text-fields - styling fixed for Actions dropdown menu in Dashboard - copy link modal styling fixed - accordion header font size adjusted - removed extra border in sign in block - ‘hidden’ replaced with ‘visually-hidden-focusable’ - ‘pull-right’ replaced with ‘float-end’ - ‘pull-left’ replaced with ‘float-start’

--- a/app/assets/stylesheets/blocks/_accordion.scss
+++ b/app/assets/stylesheets/blocks/_accordion.scss
@@ -23,6 +23,7 @@ h2.accordion-header {
   align-items: center !important;
   color: $color-accordion-button !important;
   background-color: $color-accordion-button-bg !important;
+  font-size: 1rem;
 }
 
 h2.accordion-header > a.i {
