--- a/app/assets/stylesheets/blocks/_modal_dialogs.scss
+++ b/app/assets/stylesheets/blocks/_modal_dialogs.scss
@@ -5,6 +5,9 @@
   background-color: $color-secondary-background;
 }
 
+.modal-header > h2 {
+  font-size: 20px;
+}
 
 // Footer (for actions)
 .modal-footer {
