--- a/app/views/notes/_edit.html.erb
+++ b/app/views/notes/_edit.html.erb
@@ -6,7 +6,7 @@
             <%= f.text_area(:text, class: 'form-control', id: "note-#{note.id}",
                             spellcheck: true) %>
         </div>
-        <div class="pull-right">
+        <div class="float-end">
             <%= f.button(_('Save'), class: "btn btn-default", type: "submit") %>
             <%= f.button(_('Cancel'), class: "btn btn-default", type: "button") %>
         </div>
