--- a/app/views/org_admin/phases/_index.html.erb
+++ b/app/views/org_admin/phases/_index.html.erb
@@ -28,7 +28,7 @@
                    aria-controls="#collapsePhase<%= phase.id %>">
 
                 <div class="card-heading" role="tab" id="<%= "headingPhase#{phase.id}" %>">
-                  <div class="card-title pull-left">
+                  <div class="card-title float-start">
                     <%= phase.title %>
                   </div>
                 </div>
