--- a/app/views/org_admin/phases/container.html.erb
+++ b/app/views/org_admin/phases/container.html.erb
@@ -17,7 +17,7 @@
         <div class="card card-default">
           <div class="card-body">
             <% # locals: { phase, template, edit, current_section } %>
-            <div class="pull-left">
+            <div class="float-start">
               <h2><%= _('Phase details')%></h2>
             </div>
             <div class="float-end">
