--- a/app/views/org_admin/templates/history.html.erb
+++ b/app/views/org_admin/templates/history.html.erb
@@ -2,7 +2,7 @@
   <div class="col-md-12">
     <h1>
       <%= templates.first.customization_of.present? ? _('Template Customisation History') : _('Template History') %>
-      <div class="pull-right">
+      <div class="float-end">
         <%= link_to _('View all templates'), referrer, class: "btn btn-primary" %>
       </div>
     </h1>
