--- a/app/views/paginable/templates/_organisational.html.erb
+++ b/app/views/paginable/templates/_organisational.html.erb
@@ -87,7 +87,7 @@
                   </li>
                   <li>
                     <%= direct_link(template, true) %>
-                    <a href="" class="copy-link" data-toggle="modal" data-target="#link-modal"><%= _('Copy link') %></a>
+                    <a href="" class="copy-link" data-bs-toggle="modal" data-bs-target="#link-modal"><%= _('Copy link') %></a>
                   </li>
                 </ul>
               </div>
