--- a/app/views/shared/_access_controls.html.erb
+++ b/app/views/shared/_access_controls.html.erb
@@ -13,7 +13,7 @@
       </li>
     <% end %>
   </ul>
-  <div class="tab-content border border-1 p-3">
+  <div class="tab-content">
     <div id="sign-in-form" role="tabpanel" class="tab-pane show active">
       <div class="card">
         <div class="card-body">
