--- a/app/views/super_admin/notifications/_form.html.erb
+++ b/app/views/super_admin/notifications/_form.html.erb
@@ -62,7 +62,7 @@
         "aria-required": true %>
   </div>
 
-  <div class="pull-right">
+  <div class="float-end">
     <%= f.button _('Save'), class: 'btn btn-default', type: 'submit' %>
     <%= link_to(
           _('Delete'),
