--- a/app/views/super_admin/notifications/index.html.erb
+++ b/app/views/super_admin/notifications/index.html.erb
@@ -6,7 +6,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <div class="pull-right">
+    <div class="float-end">
       <%= link_to _('+ Add New Notification'), new_super_admin_notification_path, class: 'btn btn-default', role: 'button' %>
     </div>
     <div class="table-responsive">
