--- a/app/views/super_admin/orgs/index.html.erb
+++ b/app/views/super_admin/orgs/index.html.erb
@@ -5,7 +5,7 @@
     <h1>
       <%= _('Organisations') %>
       <a href="<%= new_super_admin_org_path %>"
-         class="btn btn-primary pull-right"><%= _('Create Organisation') %></a>
+         class="btn btn-primary float-end"><%= _('Create Organisation') %></a>
     </h1>
   </div>
 </div>
