--- a/app/views/super_admin/themes/_form.html.erb
+++ b/app/views/super_admin/themes/_form.html.erb
@@ -9,7 +9,7 @@
      <%= f.label(:description, _('Guidance')) %>
      <%= f.text_area(:description, class: "form-control", rows: 10, spellcheck: true) %>
    </div>
-   <div class="pull-right">
+   <div class="float-end">
      <%= f.button(_('Save'), class: "btn btn-default", type: "submit") %>
      <% unless @theme.new_record? %>
        <%= link_to(_('Delete'), super_admin_theme_path(@theme), class: 'btn btn-default',
