--- a/app/views/notes/_layout.html.erb
+++ b/app/views/notes/_layout.html.erb
@@ -17,7 +17,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <div class="pull-right">
+          <div class="float-end">
             <%= link_to(_('Add Comment'), "#note_new#{question.id}", class: "btn btn-default note_new_link", role: "button", style: "visibility: hidden") %>
           </div>
         </div>
