--- a/app/views/notes/_new.html.erb
+++ b/app/views/notes/_new.html.erb
@@ -9,7 +9,7 @@
     <%= f.text_area(:text, class: 'form-control note', id: "note-#{question.id}",
                     spellcheck: true) %>
   </div>
-  <div class="pull-right">
+  <div class="float-end">
     <%= f.button(_('Save'), class: "btn btn-default", type: "submit") %>
   </div>
 <% end %>
