--- a/app/views/org_admin/phases/_form.html.erb
+++ b/app/views/org_admin/phases/_form.html.erb
@@ -21,6 +21,6 @@
   <%= f.text_area(:description, class: "phase", spellcheck: true) %>
 </div>
 
-<div class="form-group mb-3 col-md-4 pull-right">
+<div class="form-group mb-3 col-md-4 float-end">
   <%= f.button(_('Save'), class: 'btn btn-default', type: "submit") %>
 </div>
