--- a/app/views/org_admin/phases/preview.html.erb
+++ b/app/views/org_admin/phases/preview.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col-md-12">
     <h1><%= @template.title %></h1>
-    <div class="pull-right">
+    <div class="float-end">
       <ul class="list-inline">
         <% if @template.latest? %>
           <% if @template.customization_of.present? %>
