--- a/app/views/org_admin/sections/_form.html.erb
+++ b/app/views/org_admin/sections/_form.html.erb
@@ -13,7 +13,7 @@
   </div>
 
   <div class="form-group mb-3 col-md-10">
-    <div class="pull-right">
+    <div class="float-end">
       <%= f.button(_('Save'), class: 'btn btn-default', type: "submit") %>
       <% if section.id.present? %>
         <%= link_to _('Delete'), org_admin_template_phase_section_path(template_id: template.id, phase_id: section.phase.id, id: section), 'data-method': 'delete', rel: 'nofollow',
