--- a/app/views/research_outputs/repositories/_search_result.html.erb
+++ b/app/views/research_outputs/repositories/_search_result.html.erb
@@ -31,7 +31,7 @@
   <div class="more-info more-info-<%= result.id %>">
     <%= link_to _("More info"), "#", class: "more-info-link" %>
 
-    <div class="info hidden">
+    <div class="info visually-hidden-focusable">
       <% info = result.info.with_indifferent_access %>
       <dl>
         <dt><%= _("Repository URL") %></dt>
