--- a/app/views/shared/_copy_link_modal.html.erb
+++ b/app/views/shared/_copy_link_modal.html.erb
@@ -1,10 +1,10 @@
 <div id="link-modal" class="modal fade" role="dialog">
   <div class="modal-dialog">
     <div class="modal-header">
-      <button class="close" type="button" data-dismiss="modal">&times;</button>
       <p class="modal-title fontsize-h4">
         <%= _('Copy link') %>
       </p>
+      <button type="button" class="btn-close float-end" data-bs-dismiss="modal" aria-label="<%= _('Cancel') %>"></button>
     </div>
     <div class="modal-body">
       <input type="text" id="link" readonly="readonly" style="width: 100%">
