--- a/app/views/shared/_sign_in_form.html.erb
+++ b/app/views/shared/_sign_in_form.html.erb
@@ -24,7 +24,7 @@
       <div class="form-group mb-3">
         <span class="d-grid">
           <% target = (Rails.configuration.x.shibboleth.use_filtered_discovery_service ? shibboleth_ds_path : user_shibboleth_omniauth_authorize_path) %>
-          <%= link_to _('Sign in with your institutional credentials'), target, method: :post, class: 'btn-default' %>
+          <%= link_to _('Sign in with your institutional credentials'), target, method: :post, class: 'btn btn-default' %>
         </span>
       </div>
     <% else %>
