--- a/app/views/super_admin/api_clients/_form.html.erb
+++ b/app/views/super_admin/api_clients/_form.html.erb
@@ -63,7 +63,7 @@ orgs = Org.where(is_other: false)
     </div>
   <% end %>
 
-  <div class="pull-right">
+  <div class="float-end">
     <%= f.button _('Save'), class: 'btn btn-default', type: 'submit' %>
 
     <% unless @api_client.new_record? %>
