--- a/app/views/usage/_user_statistics.html.erb
+++ b/app/views/usage/_user_statistics.html.erb
@@ -15,10 +15,10 @@
 
 <div class="row">
   <div class="col-md-6">
-    <div class="pull-left">
+    <div class="float-start">
       <p class="bold fontsize-h4"><%= _('No. users joined during last year') %></p>
     </div>
-    <div class="pull-right">
+    <div class="float-end">
       <%= link_to usage_yearly_users_path(sep: ","), class: 'stat btn btn-default', role: 'button', target: '_blank' do %>
         <%= _('Download') %> <i class="fas fa-download" aria-hidden="true"></i>
       <% end %>
@@ -30,10 +30,10 @@
     </div>
   </div>
   <div class="col-md-6">
-    <div class="pull-left">
+    <div class="float-start">
       <p class="bold fontsize-h4"><%= _('No. plans during last year') %></p>
     </div>
-    <div class="pull-right">
+    <div class="float-end">
       <%= link_to usage_yearly_plans_path(sep: ",", filtered: @filtered), class: 'stat btn btn-default', role: 'button', target: '_blank' do %>
         <%= _('Download') %> <i class="fas fa-download" aria-hidden="true"></i>
       <% end %>
@@ -53,13 +53,13 @@
 <div class="row">
   <div class="col-md-12">
       <div class="col-md-6">
-        <div class="pull-left">
+        <div class="float-start">
           <p class="bold fontsize-h4"><%= _('No. plans by template') %></p>
         </div>
       </div>
 
       <div class="col-md-6">
-        <div class="pull-right"">
+        <div class="float-end">
           <ul class="list-inline">
             <li>
               <%= form_for :usage, url: usage_plans_by_template_path, remote: true do |f| %>
