chore: add meta tag for action cable

--- a/app/views/branded/layouts/application.html.erb
+++ b/app/views/branded/layouts/application.html.erb
@@ -71,6 +71,7 @@
       data-likmsg="<%=_('Learn more') %>"
       ></script>
     <%= csrf_meta_tags %>
+    <%= action_cable_meta_tag %>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
