Issue #3144 - sharp corners, guidance/comments and stats page Changes in this PR: - custom styling for .nav-tabs and .nav-pills sharp corners - guidance/comments tabs styling and active class issue fixed - custom styling added for .row class (in in _html.scss) to remove gutter-x - stats page styling (in progress)

--- a/app/views/phases/_guidances_notes.html.erb
+++ b/app/views/phases/_guidances_notes.html.erb
@@ -28,14 +28,14 @@
         <ul class="nav nav-tabs" role="tablist">
           <% tablist.each_with_index do |tab, i| %>
             <% active_nav ||= tab[:name] %>
-            <li role="presentation" class="nav-item<%= 'active' if active_nav == tab[:name]%>">
+            <li role="presentation" class="nav-item">
               <a
                 data-bs-target="<%= "#guidance_per_question_#{question.id}_#{i}" %>"
                 aria-controls="<%= "#guidance_per_question_#{question.id}_#{i}" %>"
                 role="tab"
                 data-bs-toggle="tab"
                 tabindex="0"
-                class="nav-link view-plan-guidance">
+                class="<%= active_nav == tab[:name] ? "nav-link view-plan-guidance active" : "nav-link view-plan-guidance" %>">
                 <%= tab[:name] %>
               </a>
             </li>
