--- a/app/assets/stylesheets/blocks/_navs.scss
+++ b/app/assets/stylesheets/blocks/_navs.scss
@@ -25,10 +25,17 @@ nav ul {
 .nav-tabs, .nav-pills {
   background-color: $color-primary-background;
   color: $color-primary-text;
+  border-radius: 0px;
 }
+
+.nav-tabs .nav-item .nav-link, .nav-pills .nav-item .nav-link {
+  border-radius: 0px;
+}
+
 .nav-tabs > li > a, .nav-pills > li > a {
   color: $color-primary-text;
 }
+
 .nav-tabs > li > a:hover,
 .nav-tabs > li > a:focus,
 .nav-tabs > li > a.active,
@@ -38,8 +45,8 @@ nav ul {
   color: $color-secondary-text;
   border: 1px solid $color-border-default;
   border-bottom-color: transparent; /* Only nav-tabs have a transparent border-bottom */
-  border-radius: 0px;
 }
+
 .nav-pills > li > a:hover,
 .nav-pills > li > a:focus,
 .nav-pills > li > a.active,
