--- a/app/views/usage/_total_usage.html.erb
+++ b/app/views/usage/_total_usage.html.erb
@@ -1,12 +1,11 @@
 <%# locals: user_count, plan_count, separators %>
 
-<div class="row mt-15 mb-15">
-  <div class="col-md-3">
-    <div class="col-xs-6">
+<div class="row">
+    <div class="col-md-2">
       <i class="fas fa-users f-large"></i>
       <p class="fontsize-h4"><%= user_count.to_i %> <%= _('Total users') %></p>
     </div>
-    <div class="col-xs-6">
+    <div class="col-md-2">
       <i class="fas fa-files f-large"></i>
       <p class="fontsize-h4"><%= plan_count.to_i %> <%= _( 'Total plans') %></p>
       <%= form_tag('/usage', method: :get, id: :filter_plans_form) do |f| %>
@@ -16,15 +15,14 @@
         <% end %>
       <% end %>
     </div>
-  </div>
   <% if @funder.present? %>
     <div class="col-md-3"></div>
   <% end %>
   <% unless current_user.can_super_admin? %>
     <div class="col-md-3"></div>
   <% end %>
-  <div class="col-md-3">
-    <form class="form-inline mt-10 mb-10 float-end">
+  <div class="col-md-2">
+    <form class="form-inline float-end">
       <label for="csv-field-sep">
         <%= _('csv download field separator') %>:
       </label>
