initial filters working from query string

--- a/react-client/src/index.scss
+++ b/react-client/src/index.scss
@@ -190,7 +190,7 @@ dialog {
 #App p.dmpui-field-error {
   color: var(--dmpui-brand-red-500);
   &::before {
-    content: "⚠ "
+    content: "⚠ ";
   }
 }
 
