--- a/react-client/src/pages/dashboard/dashboard.scss
+++ b/react-client/src/pages/dashboard/dashboard.scss
@@ -169,7 +169,7 @@
     margin-left: 8px;
   }
 }
-
+#filter-view,
 #quick-view-view {
   position: fixed;
   right: 0px;
@@ -184,6 +184,7 @@
   padding: 2rem 2rem;
   transition: all 0.3s ease-in-out;
 }
+#filter-modal.show,
 #quick-view-modal.show {
   position: fixed;
   left: 0px;
@@ -192,7 +193,7 @@
   width: 100%;
   height: 100%;
   z-index: 10;
-
+  #filter-view,
   #quick-view-view {
     opacity: 1;
     transform: translateX(0%);
