--- a/app/assets/stylesheets/dmpopidor/_header.scss
+++ b/app/assets/stylesheets/dmpopidor/_header.scss
@@ -5,7 +5,7 @@ header.dmpopidor-branding {
   display: flex;
   flex-direction: column;
   padding: 70px 0;
-  background: url(/assets/header_banner-9adcc3e6271ece03fbd7a4733e275e6c4006e4abba41283ca2fbdac252ac9939.png) no-repeat top fixed;
+  background: url(/assets/header_banner.png) no-repeat top fixed;
   background-size: cover;
   position: relative;
 
