fix: asset path in CSS

--- a/app/assets/stylesheets/dmpopidor/_header.scss
+++ b/app/assets/stylesheets/dmpopidor/_header.scss
@@ -5,7 +5,7 @@ header.dmpopidor-branding {
   display: flex;
   flex-direction: column;
   padding: 70px 0;
-  background: url(/assets/header_banner.png) no-repeat top fixed;
+  background: url(/header_banner.png) no-repeat top fixed;
   background-size: cover;
   position: relative;
 
