--- a/react-client/src/index.scss
+++ b/react-client/src/index.scss
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap");
 @import "./components/responsive";
 
+.c-skipnav {
+  color: #fff !important;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
