--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<nav id="app-navbar" class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav id="app-navbar" class="navbar navbar-expand-md navbar-branding">
   <div class="container-fluid" >
     <div class="navbar-header d-sm-flex justify-content-sm-between">
       <!-- Brand and toggle get grouped for better mobile display -->
