Issue #3144 - This commit only imports   @import "../../../../node_modules/bootstrap/scss/functions"; @import "../../../../node_modules/bootstrap/scss/variables"; and @import "../../../../node_modules/bootstrap/scss/mixins"; instead of @use "../../../../node_modules/bootstrap/scss/bootstrap" as *;

--- a/app/assets/stylesheets/blocks/_accordion.scss
+++ b/app/assets/stylesheets/blocks/_accordion.scss
@@ -1,5 +1,7 @@
 @use '../variables/colours' as *;
-@use "../../../../node_modules/bootstrap/scss/bootstrap" as *;
+
+@import "../../../../node_modules/bootstrap/scss/functions";
+@import "../../../../node_modules/bootstrap/scss/variables";
 
 // Remove box-shadow and highlight from Accordion header
 .accordion-header a {
