--- a/app/assets/stylesheets/blocks/_cards.scss
+++ b/app/assets/stylesheets/blocks/_cards.scss
@@ -1,5 +1,8 @@
 @use '../variables/colours' as *;
-@use "../../../../node_modules/bootstrap/scss/bootstrap" as *;
+
+@import "../../../../node_modules/bootstrap/scss/functions";
+@import "../../../../node_modules/bootstrap/scss/variables";
+
 // Override Bootstrap 5 cards
 
 .card {
