--- a/app/assets/stylesheets/blocks/_logos.scss
+++ b/app/assets/stylesheets/blocks/_logos.scss
@@ -1,4 +1,5 @@
-@use "../../../../node_modules/bootstrap/scss/bootstrap" as *;
+@import "../../../../node_modules/bootstrap/scss/functions";
+@import "../../../../node_modules/bootstrap/scss/variables";
 
 /* HEADER LOGOS */
 .app-logo {
