--- a/app/assets/stylesheets/blocks/_font_awesomes.scss
+++ b/app/assets/stylesheets/blocks/_font_awesomes.scss
@@ -1,5 +1,6 @@
 @use '../variables/colours' as *;
-@use "../../../../node_modules/bootstrap/scss/bootstrap" as *;
+@import "../../../../node_modules/bootstrap/scss/functions";
+@import "../../../../node_modules/bootstrap/scss/variables";
 // Override FontAwesome icons
 
 /* FONTAWESOME STYLING */
