--- a/app/assets/stylesheets/blocks/_lists.scss
+++ b/app/assets/stylesheets/blocks/_lists.scss
@@ -1,4 +1,6 @@
-@use "../../../../node_modules/bootstrap/scss/bootstrap" as *;
+@import "../../../../node_modules/bootstrap/scss/functions";
+@import "../../../../node_modules/bootstrap/scss/variables";
+
 // Overrides Bootstrap 3.0's lists
 
 /* list-group styling */
