--- a/app/assets/stylesheets/blocks/_modal_permissions.scss
+++ b/app/assets/stylesheets/blocks/_modal_permissions.scss
@@ -1,4 +1,6 @@
-@use "../../../../node_modules/bootstrap/scss/bootstrap" as *;
+@import "../../../../node_modules/bootstrap/scss/functions";
+@import "../../../../node_modules/bootstrap/scss/variables";
+
 /* Overrides ul list */
 #modal-permissions ul {
   list-style-type: none;
