--- a/app/assets/stylesheets/blocks/_notification_areas.scss
+++ b/app/assets/stylesheets/blocks/_notification_areas.scss
@@ -1,4 +1,7 @@
-@use "../../../../node_modules/bootstrap/scss/bootstrap" as *;
+@import "../../../../node_modules/bootstrap/scss/functions";
+@import "../../../../node_modules/bootstrap/scss/variables";
+@import "../../../../node_modules/bootstrap/scss/mixins";
+
 .notification-area--floating {
   position: fixed;
   top: 4rem;
