--- a/app/assets/stylesheets/blocks/_tables.scss
+++ b/app/assets/stylesheets/blocks/_tables.scss
@@ -1,5 +1,7 @@
 @use '../variables/colours' as *;
-@use "../../../../node_modules/bootstrap/scss/bootstrap" as *;
+@import "../../../../node_modules/bootstrap/scss/functions";
+@import "../../../../node_modules/bootstrap/scss/variables";
+
 // This file contains overrides to the core Bootstrap 3.x styling
 .table { 
   border: 1px solid $color-border-default;   
