--- a/app/assets/stylesheets/blocks/_template_filters.scss
+++ b/app/assets/stylesheets/blocks/_template_filters.scss
@@ -1,5 +1,7 @@
 @use '../variables/colours' as *;
-@use "../../../../node_modules/bootstrap/scss/bootstrap" as *;
+@import "../../../../node_modules/bootstrap/scss/functions";
+@import "../../../../node_modules/bootstrap/scss/variables";
+
 .template-table-filters .navbar-nav > li > a {
   color: $color-secondary-text;
   padding: 5px calc($grid-gutter-width / 2) 5px 5px;
