refactor: change the background image to the blue colour of the logo

--- a/app/assets/stylesheets/dmpopidor/_header.scss
+++ b/app/assets/stylesheets/dmpopidor/_header.scss
@@ -5,7 +5,8 @@ header.dmpopidor-branding {
   display: flex;
   flex-direction: column;
   padding: 70px 0;
-  background: url(/header_banner.png) no-repeat top fixed;
+  // background: url(/header_banner.png) no-repeat top fixed;
+  background-color: #4492C3;
   background-size: cover;
   position: relative;
 
