--- a/app/views/branded/layouts/_footer.html.erb
+++ b/app/views/branded/layouts/_footer.html.erb
@@ -59,7 +59,7 @@
       </span>
       <span>
         <a title="OPIDoR Twitter - <%= _("Opens in new window") %>" target="_blank" href="<%= Rails.configuration.x.application.twitter_url %>">
-          <i class="fab fa-twitter"></i>
+          <i class="fab fa-x-twitter"></i>
         </a>
       </span>
       <span>
