--- a/app/views/branded/phases/edit.html.erb
+++ b/app/views/branded/phases/edit.html.erb
@@ -9,7 +9,9 @@
       "locale": "<%= locale %>",
       "planId": <%= plan.id %>,
       "templateId": <%= template.id %>,
-      "userId": <%= @current_user.id %>
+      "userId": <%= @current_user.id %>,
+      "currentOrgId": <%= current_user.org.id %>,
+      "currentOrgName": "<%= current_user.org.name %>"
     }'/>
   <% else %>
     <%= render partial: 'phases/edit_plan_answers',
