Issue #3144 - Fix for dropdown text colour in header dropdown menus.

--- a/app/assets/stylesheets/blocks/_navs.scss
+++ b/app/assets/stylesheets/blocks/_navs.scss
@@ -19,9 +19,10 @@ nav ul {
 }
 
 
-// Overrides Bootstrap 3.0's nav-tabs
+// Overrides Bootstrap 
 
 /* nav-tabs and nav-pills styling */
+
 .nav-tabs, .nav-pills {
   background-color: $color-primary-background;
   color: $color-primary-text;
