--- a/app/views/branded/orgs/_profile_form.html.erb
+++ b/app/views/branded/orgs/_profile_form.html.erb
@@ -135,20 +135,21 @@
     </div>
   </div>
 
+  <!--
   <hr>
   <div class="row">
     <div class="form-group col-xs-8">
-      <h3><%= _("Google Analytics Tracker") %></h3>
+      <h3><%#= _("Google Analytics Tracker") %></h3>
     </div>
   </div>
   <div class="row">
     <div class="form-group col-xs-4">
-      <%= f.fields_for :tracker do |t| %>
-        <%= t.label :code, _('Tracker Code'), class: "control-label" %>
-        <%= t.text_field :code, class: "form-control", aria: { required: false } %>
-      <% end %>
+      <%#= f.fields_for :tracker do |t| %>
+        <%#= t.label :code, _('Tracker Code'), class: "control-label" %>
+        <%#= t.text_field :code, class: "form-control", aria: { required: false } %>
+      <%# end %>
     </div>
-  </div>
+  </div> -->
 
   <hr>
 
