added new editorial board members

--- a/app/views/branded/static_pages/editorial_board.html.erb
+++ b/app/views/branded/static_pages/editorial_board.html.erb
@@ -36,6 +36,12 @@
       </div>
     </div>
     <div class="row">
+      <div class="col-md-2"><%= image_tag "gunia.jpg", alt: 'Betsy Gunia photo' %></div>
+      <div class="col-md-10 board-bio">
+        <strong>Betsy Gunia</strong><br>Data Services, Johns Hopkins University
+      </div>
+    </div>
+    <div class="row">
       <div class="col-md-2"><%= image_tag "jhermer.jpg", alt: 'Janice Hermer photo' %></div>
       <div class="col-md-10 board-bio">
         <strong>Janice Hermer</strong><br>Health Sciences Liaison Librarian, Arizona State University
@@ -54,15 +60,22 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-2"><%= image_tag "Nick_Ruhs.jpg", alt: 'Nick Ruhs photo' %></div>
+      <div class="col-md-2"><%= image_tag "ratajeski.jpg", alt: 'Melissa Ratajeski photo' %></div>
       <div class="col-md-10 board-bio">
-        <strong>Nick Ruhs, PhD.</strong><br>STEM Data & Research Librarian, Florida State University
+        <strong>Melissa Ratajeski</strong><br>Assistant Director for Data and Publishing Services;
+        IACUC Liaison, Health Sciences Library System, University of Pittsburgh
       </div>
     </div>
     <div class="row">
       <div class="col-md-2"><%= image_tag "Sackmann_Anna_hr.jpg", alt: 'Anna Sackmann photo' %></div>
       <div class="col-md-10 board-bio">
         <strong>Anna Sackmann</strong><br>Science Data & Engineering Libraria, University of California, Berkeley
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-2"><%= image_tag "wham.jpg", alt: 'Briana Wham photo' %></div>
+      <div class="col-md-10 board-bio">
+        <strong>Briana Wham</strong><br>Research Data Librarian, STEM, Penn State University
       </div>
     </div>
   </div>
