Issue #3144 - Further fix for typo in _accordion.scss

--- a/app/assets/stylesheets/blocks/_accordion.scss
+++ b/app/assets/stylesheets/blocks/_accordion.scss
@@ -47,7 +47,7 @@ a.accordion-button:active,
 a.accordion-button:focus,
 a.accordion-button:focus-visible,
 button.accordion-button.collapsed,
-button.accordion-button:not(.collapsed)
+button.accordion-button:not(.collapsed),
 button.accordion-button,
 button.accordion-button:hover,
 button.accordion-button:active, 
