--- a/react-client/src/index.scss
+++ b/react-client/src/index.scss
@@ -337,6 +337,15 @@ dialog {
     text-align: center;
   }
 
+  [data-colname="actions"] {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    padding: 0
+  }
+
   @include device(tablet) {
     grid-template-columns: repeat(3, 1fr);
 
