--- a/app/views/branded/notes/_layout.html.erb
+++ b/app/views/branded/notes/_layout.html.erb
@@ -2,19 +2,17 @@
 <% notes = answer.non_archived_notes %>
 <div class="panel panel-default">
   <div class="panel-body">
-    <div class="row">
-      <div class="col-md-12">
-        <%= render partial: "/notes/list", locals: { question_id: question.id, notes: notes, plan: plan }, formats: [:html] %>  
-      </div>
-    </div>
     <% if plan.commentable_by?(current_user.id) %>
       <div class="row">
         <div class="col-md-12">
-          <div class="note_new" id="<%= "note_new#{question.id}research-output#{research_output.id}" %>" 
-               data-question-id="<%= question.id %>"
-               data-research-output-id="<%= research_output.id %>">
-              <%= render partial: "/notes/new", locals: { question: question, answer: answer, plan: plan, research_output: research_output }, formats: [:html] %>
-          </div>
+          <dmp-comment props-json='{
+            "locale": "<%= locale %>",
+            "planId": "<%= plan.id %>",
+            "userId": "<%= @current_user.id %>",
+            "answerId":  "<%= answer.id %>",
+            "questionId": "<%= question.id %>",
+            "researchOutputId": "<%= research_output.id %>"
+          }'/>
         </div>
       </div>
       <div class="row">
