sanitize() plan.title rendering throughout views

--- a/app/views/paginable/plans/_org_admin.html.erb
+++ b/app/views/paginable/plans/_org_admin.html.erb
@@ -29,9 +29,9 @@
         <tr>
           <td>
             <% if plan.readable_by?(current_user.id) %>
-              <%= link_to "#{plan.title.length > 60 ? "#{plan.title[0..59]} ..." : plan.title}", plan_path(plan) %>
+              <%= link_to sanitize("#{plan.title.length > 60 ? "#{plan.title[0..59]} ..." : plan.title}"), plan_path(plan) %>
             <% else %>
-              <%= plan.title.truncate(60) %>
+              <%= sanitize plan.title.truncate(60) %>
             <% end %>
           </td>
           <td><%= plan.template.title %></td>
