--- a/app/views/plans/overview.html.erb
+++ b/app/views/plans/overview.html.erb
@@ -1,9 +1,9 @@
 <%# locals: { plan } %>
 
-<% title "#{plan.title}" %>
+<% title sanitize("#{plan.title}") %>
 <div class="row">
   <div class="col-md-12">
-    <h1><%= plan.title %></h1>
+    <h1><%= sanitize plan.title %></h1>
   </div>
 </div>
 
