--- a/app/views/contributors/index.html.erb
+++ b/app/views/contributors/index.html.erb
@@ -1,9 +1,9 @@
-<% title "#{@plan.title} - contributors" %>
+<% title sanitize("#{@plan.title} - contributors") %>
 
 <div class="row">
   <div class="col-md-12">
     <!-- render the project title -->
-    <h1><%= @plan.title %></h1>
+    <h1><%= sanitize @plan.title %></h1>
   </div>
 </div>
 
