--- a/app/views/paginable/plans/_privately_visible.html.erb
+++ b/app/views/paginable/plans/_privately_visible.html.erb
@@ -19,7 +19,7 @@
         <% my_plan_roles = plan.roles.select(&:active).select { |r| r.user_id == current_user.id } %>
         <tr id="<%= dom_id(plan) %>">
           <td>
-            <%= link_to "#{plan.title.length > 60 ? "#{plan.title[0..59]} ..." : plan.title}",
+            <%= link_to sanitize("#{plan.title.length > 60 ? "#{plan.title[0..59]} ..." : plan.title}"),
                 plan_path(plan) %>
           </td>
           <td><%= plan.template.title %></td>
