--- a/app/views/phases/edit.html.erb
+++ b/app/views/phases/edit.html.erb
@@ -1,7 +1,7 @@
-<% title "#{plan.title} - Write plan" %>
+<% title sanitize("#{plan.title} - Write plan") %>
 <div class="row">
   <div class="col-md-12">
-    <h1><%= plan.title %></h1>
+    <h1><%= sanitize plan.title %></h1>
   </div>
 </div>
 
