--- a/app/views/plans/_show_details.html.erb
+++ b/app/views/plans/_show_details.html.erb
@@ -2,7 +2,7 @@
 
 <dl class="dl-horizontal">
   <dt><%= _('Project Title') %></dt>
-  <dd><%= plan.title %></dd>
+  <dd><%= sanitize plan.title %></dd>
   <dt><%= _('Project Abstract') %></dt>
   <dd><%= sanitize plan.description %></dd>
   <dt><%= _('Start and End Dates') %></dt>
