--- a/app/views/plans/request_feedback.html.erb
+++ b/app/views/plans/request_feedback.html.erb
@@ -1,8 +1,8 @@
-<% title _("#{@plan.title} - Request feedback") %>
+<% title sanitize(_("#{@plan.title} - Request feedback")) %>
 <div class="row">
   <div class="col-md-12">
     <!-- render the project title -->
-    <h1><%= @plan.title %></h1>
+    <h1><%= sanitize @plan.title %></h1>
   </div>
 </div>
 
