--- a/app/views/plans/share.html.erb
+++ b/app/views/plans/share.html.erb
@@ -1,8 +1,8 @@
-<% title "#{@plan.title} - Share" %>
+<% title sanitize("#{@plan.title} - Share") %>
 <div class="row">
   <div class="col-md-12">
     <!-- render the project title -->
-    <h1><%= @plan.title %></h1>
+    <h1><%= sanitize @plan.title %></h1>
   </div>
 </div>
 
