--- a/react-client/src/components/spinner.scss
+++ b/react-client/src/components/spinner.scss
@@ -7,6 +7,12 @@
   p {
     margin: 0.5em 0;
   }
+
+  &.page-loader {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 @keyframes loading-spinner {
