--- a/react-client/src/index.scss
+++ b/react-client/src/index.scss
@@ -57,7 +57,8 @@ code {
   --form-field-fg-color: #333;
   --form-field-border-color: #e1e1e1;
 
-  --input-required-color: red;
+  --input-required-color: var(--dmpui-brand-red-500);
+  --error-color: var(--dmpui-brand-red-500);
 
   /* Data Grid */
   --grid-gap: 1rem;
@@ -229,10 +230,16 @@ dialog {
 .page-actions {
   margin: 2rem 0;
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-end;
 
   button {
     margin-left: 10px;
+  }
+
+  .dmpui-field-error {
+    width: 100%;
+    text-align: right;
   }
 }
 
@@ -315,6 +322,11 @@ dialog {
   &.status-notstart {
     background-color: var(--dmpui-brand-blue-200);
     color: var(--dmpui-brand-blue-900);
+  }
+
+  &.status-error {
+    color: var(--dmpui-brand-red-500);
+    &::before { content: "⚠ "; }
   }
 }
 
