--- a/app/views/paginable/plans/_publicly_visible.html.erb
+++ b/app/views/paginable/plans/_publicly_visible.html.erb
@@ -12,7 +12,7 @@
     <tbody>
       <% scope.each do |plan| %>
         <tr class="table-data">
-          <td><%= sanitize plan.title %></td>
+          <td><%= sanitize(plan.title) %></td>
           <td><%= plan.template.title %></td>
           <td><%= (plan.owner.nil? || plan.owner.org.nil? ? _('Not Applicable') : plan.owner.org.name) %></td>
           <td><%= (plan.owner.nil? ? _('Unknown') : plan.owner.name(false)) %></td>
