--- a/app/views/plans/download.html.erb
+++ b/app/views/plans/download.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-md-12">
     <!-- render the project title -->
-    <h1><%= sanitize @plan.title %></h1>
+    <h1><%= sanitize(@plan.title) %></h1>
   </div>
 </div>
 
