Issue #3144 - more styling fixes Changes in this PR: - fixed copy link modal styling - fixed show password checkbox - added padding for accordion in themed guidance - removed round modal edges

--- a/app/views/org_admin/questions/_show.html.erb
+++ b/app/views/org_admin/questions/_show.html.erb
@@ -91,7 +91,7 @@
         </dl>
       </div>
 
-      <div class="col-md-4">
+      <div class="ps-4 col-md-4">
         <% has_org_themed_guidance = false %>
         <% themes_q = question.themes %>
         <% if !themes_q.nil? %>
