--- a/app/views/paginable/templates/_organisational.html.erb
+++ b/app/views/paginable/templates/_organisational.html.erb
@@ -89,7 +89,7 @@
                   </li>
                   <li>
                     <%= direct_link(template, true) %>
-                    <a href="" class="copy-link nav-link dropdown-item px-3" data-bs-toggle="modal" data-bs-target="#link-modal"><%= _('Copy link') %></a>
+                    <a href="" id="copy-link" class="copy-link nav-link dropdown-item px-3" data-bs-toggle="modal" data-bs-target="#link-modal"><%= _('Copy link') %></a>
                   </li>
                 </ul>
               </div>
