--- a/app/views/shared/_create_account_form.html.erb
+++ b/app/views/shared/_create_account_form.html.erb
@@ -27,9 +27,8 @@
   </div>
   <div class="form-group mb-3">
     <div class="checkbox">
-      <label>
-        <input type="checkbox" id="passwords_toggle_sign_up" class="passwords_toggle" /><%= _('Show password') %>
-      </label>
+        <input type="checkbox" id="passwords_toggle_sign_up" class="passwords_toggle" />
+        <%= label_tag('passwords_toggle_sign_up', _('Show password'), class: 'form-check-label') %>
     </div>
   </div>
   <div class="form-group mb-3">
